[gd_scene load_steps=4 format=3 uid="uid://dujk33uae8p5"]

[ext_resource type="Script" uid="uid://dnehyuqmk00o2" path="res://scripts/collection.gd" id="1_mldy4"]
[ext_resource type="Texture2D" uid="uid://dm57w6kcxx1tf" path="res://assets/sprites/inventory_tex_2.png" id="3_m8hiy"]
[ext_resource type="Texture2D" uid="uid://bt61d61ke3cw6" path="res://assets/sprites/decline.png" id="3_tdt8g"]

[node name="Collection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mldy4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("3_m8hiy")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 28
alignment = 1

[node name="HBoxContainer1" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32
alignment = 1

[node name="TextureRect1" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect6" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="TextureRect1" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect6" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="TextureRect1" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5

[node name="TextureRect6" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_tdt8g")
stretch_mode = 5
